# TITANOS

./: .gitignore  roadmap_tasks.md  setup.bat
TITANOS-core/: .gitignore  BUILD_PROCESS.md  CHANGELOG.md  Dockerfile  LICENSE  MERGE_MANIFEST.md  MIGRATION.md  README.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  cypress.config.js  gunicorn_conf.py  package-lock.json  package.json  pyproject.toml
TITANOS-core/benchmarks/: benchmark_latency.py
TITANOS-core/desktop/: main.cjs  preload.cjs  runtime.cjs
TITANOS-core/docker/: manylinux.Dockerfile
TITANOS-core/docs/: API.md  API_CONTRACT_STATUS.md  DESKTOP_SHIPPING.md  OPERATIONS.md  PRODUCT_WORKSPACE_AUDIT.md  conf.py  index.html  index.rst  runtime-data.md
TITANOS-core/packaging/: Dockerfile.manylinux  INSTALL_FLOW.md  exe_build.py  wheel_build.py
TITANOS-core/scratch/: test_shell.py
TITANOS-core/scripts/: build.ps1  build_exe.ps1  build_linux_wheel.sh  generate_cert.py  install_deps.ps1  release_notes.py  run.py  validate_api_contract.py
TITANOS-core/tests/: test_api_new.py  test_brain_lifecycle.py  test_desktop_runtime.py  test_hands_adapter.py  test_hands_safety.py  test_logging.py  test_memory_adapter.py  test_persistence.py  test_provider_health.py  test_runtime_features.py  test_runtime_integration.py  test_server_runtime.py  test_shell.py
TITANOS-core/titanos/: __init__.py  __main__.py  app.py  brain.py  contracts.py  defaults.py  providers.py  sources.py  store.py
TITANOS-core/titanos/body/: base.py  (+8 more)
TITANOS-core/ui/: api.js  index.html  main.js  styles.css  ui-components.js  workspace-services.js
(+81 files in other folders)
