[project]
name = "titanos-core"
version = "0.1.0"
description = "TITANOS brain and body-system contracts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "cibuildwheel>=2.16",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
]
authors = [
    {name = "TITANOS Team"},
]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=68", "wheel", "cibuildwheel>=2.16"]
build-backend = "setuptools.build_meta"

[project.scripts]
titanos = "titanos.__main__:main"

[tool.cibuildwheel]
# Build wheels for Windows, macOS and manylinux
manylinux-x86_64-image = "manylinux2014"
skip = "pp* *-musllinux*"
